[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "enigma-machine"
version = "0.1.0"
[tool.poetry.dependencies]
alphabet = "^0.0.7"
python = "^3.8"
[tool.poetry.dev-dependencies]
